"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "main/version.cc".

2006-08-24	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-03:
	  Added ICE_INVARIANT macro, updated util/likely.h, 
		updated TODO and Object/devel_switches.h
	  Some distribution clean-up in test/ directory.


2006-08-23	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80-02:
	  util/packed_array.{h,tcc}: split-off non-offset versions
		of packed_array classes, saving a bit of memory
		on arrays with no offsets, such as all packed collections
		in HAC and its intermediate forms.  
	  Object sizes affected, and test suite has been updated
		for all affected test cases.  


	* HACKT-00-01-04-main-00-80-01:
	  Diagnostics for class and structure sizes, 
		prior to invasive surgery.


2006-08-22	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-80:
	  No source revision, duplicate tag.


2006-08-21	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-61:
	  No source revision, just documentation and Makefile maintainence
		in test/.


2006-08-18	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-60:
	  BUG FIX: improper handling of conditionally uninstantiated
		instances in the create and alloc phases.  
		Thanks to Filipp Akopyan for original test case. 
		New (reduced) test cases: parser/prs/cond-0{5,6,7}.hac


2006-08-16	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-79-59:
	  prsim: latent optimization bug fix, forgot to relocate rule_map
		entry upon compaction of ExprAlloc pass.  A reduced test case 
		is difficult to produce because it depends on how expressions 
		happen to be allocated.  (Triggering test case is not small, 
		and only occurred while stepping/cycling through prsim run.)
	  Elsewhere, minor documentation updates.  

